[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["NOVOMISKI MATEO MAXIMO <mateonovo1@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
psycopg2-binary = "^2.9.7"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.21"
flask-session = "^0.5.0"
passlib = "^1.7.4"
flask-wtf = "^1.1.1"
flask-mail = "^0.9.1"
email-validator = "^2.0.0.post2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flask-shell-ipython = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
